# 3DSAM

./: README.md  commandline_args.txt  requirements.txt  test.py  train.py  train_debug.py
configs/data/: base.py  scannet_trainval.py
configs/loftr/indoor/: loftr_ds_dense.py
experiment/: Exp1.ipynb
notebooks/: demo.ipynb
scripts/reproduce_train/: indoor_ds.sh
src/config/: default.py
src/datasets/: scannet.py
src/dpt/: __init__.py  run_monodepth.py
src/lightning/: data.py  lightning_3dsam.py
src/loftr/backbone/: resnet_fpn.py
src/loftr/loftr_module/: transformer.py
src/loftr/utils/: geometry.py  supervision.py
src/losses/: threedsam_loss.py
src/threedsam/: __init__.py  threedsam.py
src/threedsam/backbone/: __init__.py  resnet_fpn.py
src/threedsam/threedsam_modules/: __init__.py  epipolar_attention.py  feature_fusion.py  fine_preprocess.py  iterative_optimization.py  linear_attention.py  structure_extract.py  transformer.py
src/threedsam/threedsam_modules/ext_modules/: gather_index.cpp  gather_index_kernel.cu  setup.py
src/threedsam/threedsam_modules/ext_modules/test/: CMakeLists.txt  kernel.cu  main.cpp
src/threedsam/utils/: coarse_matching.py  configs.py  fine_matching.py  geometry.py  index_padding.py  position_encoding.py  supervision.py
src/utils/: dataset.py  metrics.py  plotting.py
testing/: DPT.ipynb  backbone.ipynb  epipolar_attention.ipynb  epipolar_geometry.ipynb  feat_extract.ipynb  feat_fusion.ipynb  find_essential.ipynb  scannet_dataset.ipynb  test.ipynb  test1.ipynb
(+3 files in other folders)
